css/styles.css
* {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
}

video:focus {
	outline: none;
}

html {
	background-color: rgb(0, 0, 0);
}

h1,
h2 {
	font-family: 'Press Start 2P', Arial, Helvetica, sans-serif;
	line-height: 1.25em;
}

h1 {
	text-transform: uppercase;
	text-shadow: 0.075em 0.075em 0em blue;
}

p {
	font-family: 'Courier New', Courier, monospace;
	font-weight: bold;
	font-size: 1.25em;
}

.page {
	max-width: 1100px;
	margin: 0 auto;
}

.section {
	background-color: whitesmoke;
}

.section h1 {
	text-align: center;
	padding: 30px 20px 0px 20px;
}

.section p {
	padding: 20px 20px 0 20px;
}

#header,
#footer {
	background-color: black;
	height: 80px;
}

#splash {
	height: 400px;
	
	position: relative;

	overflow: hidden;
}

#splash > * {
	position: absolute;
	top: 50%;
	left: 50%;
	transform: translate(-50%, -50%);
}

#splash h1 {
	padding: 0;
	color: whitesmoke;
	text-align: center;
	text-shadow: 0.075em 0.075em 0em blue;

	width: 95%;
}

#splash video {
	min-width: 815px; /* prevents letterboxing on small screens */
	width: 100%;
}

#about {
	padding-bottom: 20px;
}

#projects {
	background-color: skyblue;
}

#skills {
	background-color: tan;
}

#skills h1 {
	text-shadow: 0.075em 0.075em 0em firebrick;
}

.grid-container {
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
	padding: 10px;
}

.grid-item {
	width: 100%;
	padding: 10px;
}

.word {
	white-space: nowrap;
}

.letter {
	display: inline-block;

	animation-duration: 2000ms;
	animation-name: bounce;
	animation-timing-function: ease-out;
	animation-iteration-count: infinite;
}

#skills .grid-item {
	/* same height as SoundCloud iframe */
	max-height: 300px; 
}

/* an additional buffer betwen grid items and their content for better control over padding */
.grid-item-content-wrapper {
	cursor: pointer;

	width: 100%;
	height: 100%;

	overflow: hidden;

	/* needed so the absolutely positioned project label children will word wrap correctly */
	position: relative;
}

.grid-item-content-wrapper > iframe,
.grid-item-content-wrapper > img {
	width: 100%;

	position: relative;
	left: 50%;
	top: 50%;
	transform: translate(-50%, -50%);
}

.grid-item-content-wrapper > h2 {
	color: whitesmoke;
	text-transform: uppercase;
	text-shadow: 0.125em 0.125em 0em blue;

	text-align: center;

	position: absolute;
	width: 100%;

	left: 50%;
	top: 50%;
	transform: translate(-50%, -50%);

	padding: 15px;
}

@keyframes bounce {
	0% { transform: translateY(0); }
	10% { transform: translateY(2px); }
	20% { transform: translateY(-4px); }
	30% { transform: translateY(2px); }
	40% { transform: translateY(0); }
}

/* phone/mobile styles */
@media only screen and (min-width: 0px) and (max-width: 500px) {
	h1 {
		font-size: 1.5em;
	}

	#splash {
		height: 300px;
	}
}

/* tablet styles */
@media only screen and (min-width: 501px) and (max-width: 1024px) {
	.grid-item {
		width: 50%;
	}

	#skills .grid-item {
		width: 100%;
	}
}

/* desktop styles */
@media only screen and (min-width: 1025px) {
	.grid-item {
		width: 25%;
	}

	#skills .grid-item {
		width: 100%;
	}

	#projects .grid-item {
		height: 400px;
	}

	#projects .grid-item-content-wrapper > img {
		height: 100%;
		width: auto;
	}
}

